--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -43,12 +43,13 @@
     </style>
 
     <style name="status_panel_text"
-           parent="android:Widget.TextView">
+           parent="TextAppearance.AppCompat.Medium">
         <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:maxLines">1</item>
         <item name="android:layout_gravity">center</item>
         <item name="android:drawablePadding">2dp</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:textAppearance">@style/TextAppearance.AppCompat.Medium</item>
         <item name="android:textColor">@android:color/white</item>
         <item name="android:gravity">center_vertical</item>
     </style>
