--- a/app/src/main/res/xml/preference_headers_legacy.xml
+++ b/app/src/main/res/xml/preference_headers_legacy.xml
@@ -37,7 +37,7 @@
         >
         <intent
             android:targetPackage="com.nextgis.mobile"
-            android:targetClass="com.nextgis.mobile.SettingsActivity"
+            android:targetClass="com.nextgis.mobile.activity.SettingsActivity"
             android:action="com.nextgis.mobile.PREFS_MAP"
             />
     </Preference>
@@ -47,7 +47,7 @@
         >
         <intent
             android:targetPackage="com.nextgis.mobile"
-            android:targetClass="com.nextgis.mobile.SettingsActivity"
+            android:targetClass="com.nextgis.mobile.activity.SettingsActivity"
             android:action="com.nextgis.mobile.PREFS_LOCATION"
             />
     </Preference>
