--- a/app/src/main/res/xml/preferences_general.xml
+++ b/app/src/main/res/xml/preferences_general.xml
@@ -22,7 +22,30 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<PreferenceScreen>
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+
+  <PreferenceCategory android:title="@string/compass_title">
+    <CheckBoxPreference
+        android:key="compass_true_north"
+        android:title="@string/compass_true_north"
+        android:defaultValue="true"
+        />
+    <CheckBoxPreference
+        android:key="compass_show_magnetic"
+        android:title="@string/compass_magnetic"
+        android:defaultValue="false"
+        />
+    <CheckBoxPreference
+        android:key="compass_vibration"
+        android:title="@string/compass_vibrate"
+        android:defaultValue="true"
+        />
+    <CheckBoxPreference
+        android:key="compass_wake_lock"
+        android:title="@string/compass_keep_screen"
+        android:defaultValue="true"
+        />
+  </PreferenceCategory>
 
 
 </PreferenceScreen>
