--- a/app/src/main/res/xml/preference_headers.xml
+++ b/app/src/main/res/xml/preference_headers.xml
@@ -23,16 +23,18 @@
   -->
 
 <preference-headers xmlns:android="http://schemas.android.com/apk/res/android">
-    <!-- TODO: header
-        android:fragment="com.nextgis.mobile.fragment.SettingsFragment"
-        android:title="@string/general"
-        android:summary="@string/general_summary">
-        <extra android:name="settings" android:value="general" />
-    </header-->
     <header
         android:fragment="com.nextgis.mobile.fragment.SettingsFragment"
-        android:title="@string/map"
+        android:summary="@string/general_summary"
+        android:title="@string/general">
+        <extra
+            android:name="settings"
+            android:value="general"/>
+    </header>
+    <header
+        android:fragment="com.nextgis.mobile.fragment.SettingsFragment"
         android:summary="@string/map_summary"
+        android:title="@string/map"
         >
         <extra
             android:name="settings"
@@ -41,8 +43,8 @@
     </header>
     <header
         android:fragment="com.nextgis.mobile.fragment.SettingsFragment"
-        android:title="@string/location"
         android:summary="@string/location_summary"
+        android:title="@string/location"
         >
         <extra
             android:name="settings"
@@ -51,8 +53,8 @@
     </header>
     <header
         android:fragment="com.nextgis.mobile.fragment.SettingsFragment"
-        android:title="@string/tracks"
         android:summary="@string/tracks_summary"
+        android:title="@string/tracks"
         >
         <extra
             android:name="settings"
@@ -60,13 +62,13 @@
             />
     </header>
     <header
-        android:title="@string/ngw"
         android:summary="@string/ngw_summary"
+        android:title="@string/ngw"
         >
         <intent
-            android:targetPackage="com.nextgis.mobile"
-            android:targetClass="com.nextgis.mobile.activity.NGWSettingsActivityProxy"
             android:action="com.nextgis.mobile.PREFS_NGW"
+            android:targetClass="com.nextgis.mobile.activity.NGWSettingsActivityProxy"
+            android:targetPackage="com.nextgis.mobile"
             />
     </header>
 </preference-headers>
