--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -28,4 +28,14 @@
         <item>2</item>
         <item>3</item>
     </string-array>
+    <string-array name="map_bg_val" translatable="false">
+        <item>light</item>
+        <item>neutral</item>
+        <item>dark</item>
+    </string-array>
+    <string-array name="map_bg" translatable="false">
+        <item>@string/map_bg_light</item>
+        <item>@string/map_bg_neutral</item>
+        <item>@string/map_bg_dark</item>
+    </string-array>
 </resources>
