--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -33,7 +33,7 @@
         <item>neutral</item>
         <item>dark</item>
     </string-array>
-    <string-array name="map_bg" translatable="false">
+    <string-array name="map_bg_entry" translatable="false">
         <item>@string/map_bg_light</item>
         <item>@string/map_bg_neutral</item>
         <item>@string/map_bg_dark</item>
