--- a/app/src/main/res/layout/activity_new_layer.xml
+++ b/app/src/main/res/layout/activity_new_layer.xml
@@ -19,13 +19,13 @@
   ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
   -->
 
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:fab="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+             xmlns:fab="http://schemas.android.com/apk/res-auto"
+             xmlns:tools="http://schemas.android.com/tools"
+             android:layout_width="match_parent"
+             android:layout_height="match_parent">
 
-    <include layout="@layout/actionbar" />
+    <include layout="@layout/actionbar"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -34,37 +34,38 @@
         android:orientation="vertical"
         android:padding="8dp">
 
-        <android.support.design.widget.TextInputLayout
+        <TextView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:text="@string/layer_name"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
-            <EditText
-                android:id="@+id/et_layer_name"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/layer_name" />
-        </android.support.design.widget.TextInputLayout>
+        <EditText
+            android:id="@+id/et_layer_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"/>
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
+            android:layout_margin="5dp"
             android:text="@string/geom_type"
-            android:textColor="?attr/colorAccent"
-            android:textSize="12sp" />
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
         <Spinner
             android:id="@+id/sp_layer_type"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:entries="@array/geom_names"
-            android:paddingBottom="8dp" />
+            android:paddingBottom="8dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="8dp">
+            android:padding="5dp">
 
             <TextView
                 android:layout_width="0dp"
@@ -72,8 +73,7 @@
                 android:layout_gravity="center_vertical"
                 android:layout_weight="1"
                 android:text="@string/fields"
-                android:textColor="?attr/colorAccent"
-                android:textSize="12sp" />
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
             <ImageButton
                 android:id="@+id/ib_add_field"
@@ -82,13 +82,13 @@
                 android:adjustViewBounds="true"
                 android:background="@null"
                 android:src="@drawable/ic_plus"
-                tools:ignore="ContentDescription" />
+                tools:ignore="ContentDescription"/>
         </LinearLayout>
 
         <ListView
             android:id="@+id/lv_fields"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"/>
     </LinearLayout>
 
     <com.getbase.floatingactionbutton.FloatingActionButton
@@ -102,6 +102,6 @@
         fab:fab_addButtonColorNormal="?attr/colorPrimary"
         fab:fab_addButtonColorPressed="?attr/colorAccent"
         fab:fab_addButtonPlusIconColor="@android:color/white"
-        fab:fab_icon="@drawable/ic_action_apply_dark" />
+        fab:fab_icon="@drawable/ic_action_apply_dark"/>
 
-</android.support.design.widget.CoordinatorLayout>
+</FrameLayout>
