--- a/app/src/main/res/layout/dialog_new_field.xml
+++ b/app/src/main/res/layout/dialog_new_field.xml
@@ -20,36 +20,37 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical"
+              android:padding="16dp">
 
-    <android.support.design.widget.TextInputLayout
+    <TextView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:text="@string/field_name"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
-        <EditText
-            android:id="@+id/et_field_name"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM_"
-            android:hint="@string/field_name" />
-    </android.support.design.widget.TextInputLayout>
+    <EditText
+        android:id="@+id/et_field_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:digits="0123456789qwertzuiopasdfghjklyxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM_"
+        android:inputType="text"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="8dp"
         android:text="@string/field_type"
-        android:textColor="?attr/colorAccent"
-        android:textSize="12sp" />
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
 
     <Spinner
         android:id="@+id/sp_field_type"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:entries="@array/field_names"
-        android:paddingBottom="8dp" />
+        android:paddingBottom="8dp"/>
 
 </LinearLayout>
