--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -23,116 +23,97 @@
   -->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-    >
+              android:orientation="vertical">
 
     <include
         layout="@layout/actionbar"/>
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         android:id="@+id/scrollView"
-        >
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                >
+                android:layout_height="wrap_content">
 
                 <ImageView
+                    android:id="@+id/app_logo"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:id="@+id/app_logo"
-                    android:src="@drawable/ic_launcher"
                     android:layout_margin="10dp"
                     android:minHeight="64dp"
                     android:minWidth="64dp"
-                    />
+                    android:src="@drawable/ic_launcher"/>
 
                 <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="match_parent"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:layout_weight="1"
-                    >
+                    android:orientation="vertical">
 
                     <TextView
+                        android:id="@+id/app_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceLarge"
-                        android:text="@string/app_name"
-                        android:id="@+id/app_name"
                         android:layout_gravity="center_horizontal|top"
                         android:layout_margin="5dp"
                         android:gravity="center_horizontal"
-                        android:layout_weight="1"
-                        />
+                        android:text="@string/app_name"
+                        android:textAppearance="?android:attr/textAppearanceLarge"/>
 
                     <TextView
+                        android:id="@+id/app_version"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceMedium"
-                        android:text="Medium Text"
-                        android:id="@+id/app_version"
-                        android:gravity="center_horizontal"
                         android:layout_margin="5dp"
-                        android:layout_weight="1"
-                        />
-
+                        android:gravity="center_horizontal"
+                        android:text="Medium Text"
+                        android:textAppearance="?android:attr/textAppearanceMedium"/>
                 </LinearLayout>
-
             </LinearLayout>
 
             <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/app_description"
                 android:id="@+id/app_description"
-                android:layout_margin="10dp"
-                />
-
-            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/credits_intro"
+                android:layout_margin="10dp"
+                android:text="@string/app_description"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+            <TextView
+                android:id="@+id/contacts"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/contacts"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
+
+            <Button
                 android:id="@+id/creditsInto"
-                android:layout_margin="10dp"
-                />
-
-            <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/credits"
-                android:id="@+id/credits"
                 android:layout_margin="10dp"
-                android:linksClickable="true"
-                />
+                android:text="@string/credits_intro"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
 
             <TextView
+                android:id="@+id/copyright"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="@string/copyright"
-                android:id="@+id/copyright"
                 android:layout_gravity="center_horizontal"
-                android:layout_margin="20dp"
+                android:layout_margin="10dp"
                 android:linksClickable="true"
-                />
-
+                android:text="@string/copyright"
+                android:textAppearance="?android:attr/textAppearanceMedium"/>
         </LinearLayout>
     </ScrollView>
-
 </LinearLayout>
