--- a/app/src/main/res/layout/status_panel.xml
+++ b/app/src/main/res/layout/status_panel.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -28,61 +28,52 @@
               android:background="?attr/colorPrimary"
               android:gravity="center_vertical"
               android:orientation="vertical"
-              android:padding="5dp"
-    >
+              android:padding="5dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <com.nextgis.mobile.util.AutoFitTextView
             android:id="@+id/tv_latitude"
             style="@style/status_panel_text"
-            android:gravity="center"
-            />
+            android:gravity="center"/>
 
         <com.nextgis.mobile.util.AutoFitTextView
             android:id="@+id/tv_longitude"
             style="@style/status_panel_text"
-            android:gravity="center"
-            />
+            android:gravity="center"/>
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="center"
         android:gravity="center"
-        android:orientation="horizontal"
-        >
+        android:orientation="horizontal">
 
         <com.nextgis.mobile.util.AutoFitTextView
             android:id="@+id/tv_source"
-            style="@style/status_panel_text"
-            />
+            style="@style/status_panel_text"/>
 
         <com.nextgis.mobile.util.AutoFitTextView
             android:id="@+id/tv_accuracy"
             style="@style/status_panel_text"
             android:drawableLeft="@drawable/ic_accuracy"
-            android:drawableStart="@drawable/ic_accuracy"
-            />
+            android:drawableStart="@drawable/ic_accuracy"/>
 
         <com.nextgis.mobile.util.AutoFitTextView
             android:id="@+id/tv_altitude"
             style="@style/status_panel_text"
             android:drawableLeft="@drawable/ic_altitude"
-            android:drawableStart="@drawable/ic_altitude"
-            />
+            android:drawableStart="@drawable/ic_altitude"/>
 
         <com.nextgis.mobile.util.AutoFitTextView
             android:id="@+id/tv_speed"
             style="@style/status_panel_text"
-            android:layout_weight="2"
             android:drawableLeft="@drawable/ic_speed"
-            android:drawableStart="@drawable/ic_speed"
-            />
+            android:drawableStart="@drawable/ic_speed"/>
     </LinearLayout>
 </LinearLayout>
