--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -23,13 +23,12 @@
 
 <!-- A DrawerLayout is intended to be used as the top-level content view using match_parent for both width and height to consume the full space available. -->
 <android.support.v4.widget.DrawerLayout
+    android:id="@+id/drawer_layout"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    >
+    android:fitsSystemWindows="true">
 
     <!--
          As the main content view, the view below consumes the entire
@@ -38,8 +37,7 @@
     <FrameLayout
         android:id="@+id/mainview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        >
+        android:layout_height="match_parent">
 
         <fragment
             android:id="@+id/map"
@@ -47,16 +45,13 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
-            tools:layout="@layout/fragment_map"
-            />
+            tools:layout="@layout/fragment_map"/>
 
         <include
             layout="@layout/actionbar"/>
 
         <include
-            layout="@layout/bottombar"
-
-            />
+            layout="@layout/bottombar"/>
     </FrameLayout>
 
     <!--
@@ -77,7 +72,6 @@
         android:layout_height="match_parent"
         android:layout_gravity="left|start"
         android:fitsSystemWindows="true"
-        tools:layout="@layout/fragment_layers"
-        />
+        tools:layout="@layout/fragment_layers"/>
 
 </android.support.v4.widget.DrawerLayout>
