--- a/app/src/main/res/layout/status_panel_land.xml
+++ b/app/src/main/res/layout/status_panel_land.xml
@@ -6,7 +6,7 @@
   ~ Author:   NikitaFeodonit, nfeodonit@yandex.com
   ~ Author:   Stanislav Petriakov, becomeglory@gmail.com
   ~ ******************************************************************************
-  ~ Copyright (c) 2012-2015. NextGIS, info@nextgis.com
+  ~ Copyright (c) 2012-2016 NextGIS, info@nextgis.com
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -26,50 +26,44 @@
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:background="?attr/colorPrimary"
-              android:padding="5dp"
-              android:orientation="horizontal"
               android:gravity="center_vertical"
-    >
+              android:minHeight="?attr/actionBarSize"
+              android:orientation="horizontal"
+              android:padding="5dp">
 
     <TextView
         android:id="@+id/tv_latitude"
-        android:layout_weight="3"
         style="@style/status_panel_text_land"
-        />
+        android:layout_weight="3"/>
 
     <TextView
         android:id="@+id/tv_longitude"
-        android:layout_weight="3"
         style="@style/status_panel_text_land"
-        />
+        android:layout_weight="3"/>
 
     <TextView
         android:id="@+id/tv_source"
-        android:layout_weight="1"
         style="@style/status_panel_text_land"
-        />
+        android:layout_weight="1"/>
 
     <TextView
         android:id="@+id/tv_accuracy"
-        android:layout_weight="1"
         style="@style/status_panel_text_land"
+        android:layout_weight="1"
         android:drawableLeft="@drawable/ic_accuracy"
-        android:drawableStart="@drawable/ic_accuracy"
-        />
+        android:drawableStart="@drawable/ic_accuracy"/>
 
     <TextView
         android:id="@+id/tv_altitude"
-        android:layout_weight="1"
         style="@style/status_panel_text_land"
+        android:layout_weight="1"
         android:drawableLeft="@drawable/ic_altitude"
-        android:drawableStart="@drawable/ic_altitude"
-        />
+        android:drawableStart="@drawable/ic_altitude"/>
 
     <TextView
         android:id="@+id/tv_speed"
-        android:layout_weight="2"
         style="@style/status_panel_text_land"
+        android:layout_weight="2"
         android:drawableLeft="@drawable/ic_speed"
-        android:drawableStart="@drawable/ic_speed"
-        />
+        android:drawableStart="@drawable/ic_speed"/>
 </LinearLayout>
